--- a/css/wiebenik.css
+++ b/css/wiebenik.css
@@ -1,3 +1,11 @@
 body {
     background-color: powderblue;
+    margin: 0px 50px 0px 50px;
+    font-family: 'Oswald', sans-serif;
+}
+img {
+    float: left;
+    border-style: solid;
+    margin: 10px 10px 10px 0px;
+    height:200px; width:400px;
 }
