--- a/css/bijbaan.css
+++ b/css/bijbaan.css
@@ -1,5 +1,11 @@
 body { 
-    background-color: chartreuse;
+    background-color: aquamarine;
     margin: 0px 50px 50px 0px;
     font-family: 'Oswald', sans-serif;
+}
+h1 {
+    text-align: center;
+}
+div.a {
+    text-align: center;
 }
