--- a/css/wiebenik.css
+++ b/css/wiebenik.css
@@ -9,3 +9,9 @@ img {
     margin: 10px 10px 10px 0px;
     height:200px; width:400px;
 }
+h1 {
+    text-align: center;
+}
+div.a {
+    text-align: center;
+}
